# YongMath

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: matrix3.h  matrix4.h  quaternion.h  vector3.h
src/: CMakeLists.txt  matrix3.cpp  matrix4.cpp  quaternion.cpp  vector3.cpp
